--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -27,7 +27,16 @@
       <div class="col-12 col-md-6 col-lg-4">
         <%= link_to cocktail_path(cocktail), class: "text-decoration-none" do %>
           <div class="card shadow card-hover p-3 m-1 mt-4">
-            <h2 class="fst-italic"><%= cocktail.name.capitalize %></h2>
+            <!-- H2 and favorite icon -->
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <h2 class="fst-italic"><%= cocktail.name.capitalize %></h2>
+              <!-- current_user.favorited_cocktails.include?(@cocktail) -->
+              <% if @cocktail_favs.include?(cocktail)%>
+                <i class="fa-solid fa-heart h1-font fs-2 me-2"></i>
+              <% else %>
+                <i class="fa-regular fa-heart h1-font fs-2 me-2"></i>
+              <% end %>
+            </div>
             <img src="https://www.pollinations.ai/prompt/<%= cocktail.name %> cocktail drink" alt="<%= cocktail.name %>" class="rounded border-bottom" >
             <div class="mt-3">
               <p class="ingredients">
