--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -22,7 +22,7 @@
     </div>
   <% end %>
   <!-- cocktail collection -->
-  <div class="row d-flex justify-content-between">
+  <div class="row d-flex justify-content-start">
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-md-6 col-lg-4">
         <%= link_to cocktail_path(cocktail), class: "text-decoration-none" do %>
@@ -77,7 +77,7 @@
                     <p class="text-light"><%= cocktail_rating_avg %></p>
                   <% end %>
                   <!-- Review stars logic -->
-                  <%= render "ratings", cocktail_rating: cocktail_rating_avg %>
+                  <%= render "shared/ratings", cocktail_rating: cocktail_rating_avg %>
                   <% review_array = [] %>
                   <% @user_reviews.each do |review| %>
                     <% if review.cocktail.name == cocktail.name %>
