--- a/app/views/pages/journal.html.erb
+++ b/app/views/pages/journal.html.erb
@@ -1,18 +1,26 @@
 <div class="container my-5">
   <h1 class="display-4 fw-bold mb-3">Cocktail Journal</h1>
   <p class="fs-5 mb-4">
-    Manage and organize all your cocktails in one place.
+    Manage all your cocktails in one place.
   </p>
-  <!-- User created cocktails -->
-  <h2 class="mt-5">My Cocktail Recipes
-    <i class="fa-duotone fa-solid fa-martini-glass-citrus"></i>
+  <h2 class="mt-5 mb-4">My Cocktails
+    <i class="fa-solid fa-martini-glass"></i>
   </h2>
-  <div class="row d-flex justify-content-between">
+  <div class="row d-flex justify-content-start">
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-md-6 col-lg-4">
         <%= link_to cocktail_path(cocktail), class: "text-decoration-none" do %>
           <div class="card shadow card-hover p-3 m-1 mt-4">
-            <h2 class="fst-italic"><%= cocktail.name.capitalize %></h2>
+            <!-- H2 and favorite icon -->
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <h2 class="fst-italic"><%= cocktail.name.capitalize %></h2>
+              <!-- current_user.favorited_cocktails.include?(@cocktail) -->
+              <% if @cocktail_favs.include?(cocktail)%>
+                <i class="fa-solid fa-heart h1-font fs-2 me-2"></i>
+              <% else %>
+                <i class="fa-regular fa-heart h1-font fs-2 me-2"></i>
+              <% end %>
+            </div>
             <img src="https://www.pollinations.ai/prompt/<%= cocktail.name %> cocktail drink" alt="<%= cocktail.name %>" class="rounded border-bottom" >
             <div class="mt-3">
               <p class="ingredients">
@@ -24,7 +32,7 @@
               </p>
             </div>
             <div>
-              <div class="d-flex align-items-center flex-wrap" style="gap: 0.5rem;">
+              <div class="d-flex align-items-center flex-wrap mt-3" style="gap: 0.5rem;">
                 <h5 class="text-light mb-0 me-2">Tags:</h5>
                 <% cocktail.tags.each do |tag| %>
                   <% if tag.cocktail.name == cocktail.name %>
@@ -34,6 +42,38 @@
                   <% end %>
                 <% end %>
               </div>
+              <!-- Make the rating dynamic. Find a way to calculate the average rating for the correct cocktail. -->
+              <div>
+                <% cocktail_rating = [] %>
+                <% @user_reviews.each do |review| %>
+                  <% if review.cocktail.name == cocktail.name %>
+                    <% cocktail_rating.push(review.rating) %>
+                  <% end %>
+                <% end %>
+                <% if cocktail_rating.any? %>
+                  <% cocktail_rating_avg = cocktail_rating.sum / cocktail_rating.length %>
+                <% else %>
+                  <% cocktail_rating_avg = 0 %>
+                <% end %>
+                <!-- <p class="text-light mt-4">Rating: <%#= cocktail_rating_avg %> (<%#= cocktail_rating.length %>)</p> -->
+                <div class="d-flex justify-content-start align-items-center gap-2 mt-4 mb-3">
+                  <% if cocktail_rating_avg > 0 %>
+                    <p class="text-light"><%= cocktail_rating_avg %></p>
+                  <% end %>
+                  <!-- Review stars logic -->
+                  <%= render "shared/ratings", cocktail_rating: cocktail_rating_avg %>
+                  <% review_array = [] %>
+                  <% @user_reviews.each do |review| %>
+                    <% if review.cocktail.name == cocktail.name %>
+                      <% review_array.push(review) %>
+                    <% end %>
+                  <% end %>
+                  <% reviews = review_array.length %>
+                  <% if reviews > 0 %>
+                    <p class="text-light">(<%= reviews %>)</p>
+                  <% end %>
+                </div>
+              </div>
             </div>
           </div>
         <% end %>
@@ -41,20 +81,25 @@
     <% end %>
   </div>
   <!-- Favorited cocktails -->
-  <h2 class="mt-5">My Favorited Cocktails
+  <h2 class="mt-5 mb-4">My Favorite Cocktails
     <i class="fa-solid fa-heart"></i>
   </h2>
-  <div class="row d-flex justify-content-between">
+  <div class="row d-flex justify-content-start">
     <% @cocktail_favs.each do |favorite| %>
       <% @cocktails.each do |cocktail| %>
         <% if favorite == cocktail %>
           <div class="col-12 col-md-6 col-lg-4">
             <%= link_to cocktail_path(cocktail), class: "text-decoration-none" do %>
               <div class="card shadow card-hover p-3 m-1 mt-4">
+                <!-- H2 and favorite icon -->
                 <div class="d-flex justify-content-between align-items-center mb-2">
                   <h2 class="fst-italic"><%= cocktail.name.capitalize %></h2>
-                  <!-- Favorited cocktail icon -->
-                  <i class="fa-solid fa-heart h1-font fs-2 me-2"></i>
+                  <!-- current_user.favorited_cocktails.include?(@cocktail) -->
+                  <% if @cocktail_favs.include?(cocktail)%>
+                    <i class="fa-solid fa-heart h1-font fs-2 me-2"></i>
+                  <% else %>
+                    <i class="fa-regular fa-heart h1-font fs-2 me-2"></i>
+                  <% end %>
                 </div>
                 <img src="https://www.pollinations.ai/prompt/<%= cocktail.name %> cocktail drink" alt="<%= cocktail.name %>" class="rounded border-bottom" >
                 <div class="mt-3">
@@ -67,7 +112,7 @@
                   </p>
                 </div>
                 <div>
-                  <div class="d-flex align-items-center flex-wrap" style="gap: 0.5rem;">
+                  <div class="d-flex align-items-center flex-wrap mt-3" style="gap: 0.5rem;">
                     <h5 class="text-light mb-0 me-2">Tags:</h5>
                     <% cocktail.tags.each do |tag| %>
                       <% if tag.cocktail.name == cocktail.name %>
@@ -76,6 +121,38 @@
                         </p>
                       <% end %>
                     <% end %>
+                  </div>
+                  <!-- Make the rating dynamic. Find a way to calculate the average rating for the correct cocktail. -->
+                  <div>
+                    <% cocktail_rating = [] %>
+                    <% @user_reviews.each do |review| %>
+                      <% if review.cocktail.name == cocktail.name %>
+                        <% cocktail_rating.push(review.rating) %>
+                      <% end %>
+                    <% end %>
+                    <% if cocktail_rating.any? %>
+                      <% cocktail_rating_avg = cocktail_rating.sum / cocktail_rating.length %>
+                    <% else %>
+                      <% cocktail_rating_avg = 0 %>
+                    <% end %>
+                    <!-- <p class="text-light mt-4">Rating: <%#= cocktail_rating_avg %> (<%#= cocktail_rating.length %>)</p> -->
+                    <div class="d-flex justify-content-start align-items-center gap-2 mt-4 mb-3">
+                      <% if cocktail_rating_avg > 0 %>
+                        <p class="text-light"><%= cocktail_rating_avg %></p>
+                      <% end %>
+                      <!-- Review stars logic -->
+                      <%= render "shared/ratings", cocktail_rating: cocktail_rating_avg %>
+                      <% review_array = [] %>
+                      <% @user_reviews.each do |review| %>
+                        <% if review.cocktail.name == cocktail.name %>
+                          <% review_array.push(review) %>
+                        <% end %>
+                      <% end %>
+                      <% reviews = review_array.length %>
+                      <% if reviews > 0 %>
+                        <p class="text-light">(<%= reviews %>)</p>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
