--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,55 +10,59 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto gap-2">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to cocktails_path, class: "nav-link fs-5", "aria-current": "page" do %>
+          <li class="nav-item">
+            <%= link_to cocktails_path, class: nav_link_class(cocktails_path), "aria-current": (current_page?(cocktails_path) ? "page" : nil) do %>
               Browse <i class="fa-regular fa-rectangle-list"></i>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to new_cocktail_path, class: "nav-link fs-5" do %>
+            <%= link_to new_cocktail_path, class: nav_link_class(new_cocktail_path), "aria-current": (current_page?(new_cocktail_path) ? "page" : nil) do %>
               New Cocktail <i class="fa-solid fa-martini-glass-citrus"></i>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to new_cocktail_path, class: "nav-link fs-5" do %> SipSense Mix <i class="fa-solid fa-wand-magic-sparkles"></i>
+            <!-- Add the appropriate links (X2) to navbar later once AI "cocktail creation" feature is built -->
+            <%= link_to "#", class: nav_link_class(), "aria-current": (current_page?("#") ? "page" : nil) do %>
+              SipSense Mix <i class="fa-solid fa-wand-magic-sparkles"></i>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to new_cocktail_path, class: "nav-link fs-5" do %> SipSense AI <i class="fa-solid fa-comment-dots"></i>
+            <!-- Add the appropriate links (x2) to navbar later once AI "chat" feature is built -->
+            <%= link_to "#", class: nav_link_class(), "aria-current": (current_page?("#") ? "page" : nil) do %>
+              SipSense AI <i class="fa-solid fa-comment-dots"></i>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to journal_path, class: "nav-link fs-5 me-2" do %>
+            <%= link_to journal_path, class: nav_link_class(journal_path), "aria-current": (current_page?(journal_path) ? "page" : nil) do %>
               Journal <i class="fa-solid fa-book"></i>
             <% end %>
           </li>
           <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-haspopup="true">
+            <a href="#" class="nav-link dropdown-toggle ms-2" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-haspopup="true">
               <%= image_tag "happy-dog5.png", alt: "user avatar image", class: "avatar" %>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navBarDropdown">
               <li>
                 <%= link_to "Profile", user_profile_path, class: "dropdown-item fs-5" %>
-                  <!-- <i class="fa-solid fa-user"></i> Profile -->
-                  <%# end %>
+                <!-- <i class="fa-solid fa-user"></i> Profile -->
+                <%# end %>
               </li>
               <li>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item fs-5", data: { turbo_method: :delete} %>
-                  <!-- <i class="fa-solid fa-right-from-bracket"> Log out -->
-                  <%# end %>
-                </li>
-              </ul>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <%= link_to "Login", new_user_session_path, class: "nav-link fs-5" %>
-            </li>
-            <li>
-              <%= link_to "Sign-up", new_user_registration_path, class: "nav-link fs-5 me-4"  %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
+                <!-- <i class="fa-solid fa-right-from-bracket"> Log out -->
+                <%# end %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", new_user_session_path, class: "nav-link fs-5" %>
+          </li>
+          <li>
+            <%= link_to "Sign-up", new_user_registration_path, class: "nav-link fs-5 me-4"  %>
+          </li>
+        <% end %>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
