bug fix comment for later reference

--- a/app/views/pages/journal.html.erb
+++ b/app/views/pages/journal.html.erb
@@ -81,6 +81,7 @@
     <% end %>
   </div>
   <!-- Favorited cocktails -->
+  <!-- fix(fav): does NOT yet show favorite cocktails created by other users. Likely because the controller only has an instance variable @cocktail_favs that gives favorite cocktails created by (i.e. connected to) the current_user -->
   <h2 class="mt-5 mb-4">My Favorite Cocktails
     <i class="fa-solid fa-heart"></i>
   </h2>
