feat: added author to cocktail index page

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -89,6 +89,7 @@
                     <p class="text-light">(<%= reviews %>)</p>
                   <% end %>
                 </div>
+                <p class="dark-grey-font">Created by <span class="fst-italic text-light"><%= cocktail.user.username %></span></p>
               </div>
             </div>
           </div>
