style: author on index page smaller font

--- a/app/assets/stylesheets/components/_fonts.scss
+++ b/app/assets/stylesheets/components/_fonts.scss
@@ -70,3 +70,7 @@ h4 {
   color: #ff13f0;
   filter: drop-shadow(0 0 2px #8a0c77) drop-shadow(0 0 5px #ff13f0);
 }
+
+.small {
+  font-size: 0.875em;
+}
