--- a/app/views/pages/journal.html.erb
+++ b/app/views/pages/journal.html.erb
@@ -71,6 +71,7 @@
                     <p class="text-light">(<%= reviews %>)</p>
                   <% end %>
                 </div>
+                <p class="dark-grey-font small">Created by <span class="fst-italic text-light">You<%#= cocktail.user.username %></span></p>
               </div>
             </div>
           </div>
@@ -146,6 +147,7 @@
                     <p class="text-light">(<%= reviews %>)</p>
                   <% end %>
                 </div>
+                <p class="dark-grey-font small">Created by <span class="fst-italic text-light"><%= cocktail.user.username %></span></p>
               </div>
             </div>
           </div>
