--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,8 +2,10 @@
   <div class="container">
     <h1>A community collection of <strong>Cocktail</strong> recipes!</h1>
     <p>Add one now and share it to the world.</p>
-    <%= link_to new_cocktail_path if policy(Cocktail).new?, class: "btn btn-secondary btn-lg me-2" do%>
-      Create <i class="fa-duotone fa-solid fa-martini-glass-citrus"></i>
+    <% if policy(Cocktail).new? %>
+      <%= link_to new_cocktail_path, class: "btn btn-secondary btn-lg me-2" do%>
+        Create <i class="fa-duotone fa-solid fa-martini-glass-citrus"></i>
+      <% end %>
     <% end %>
     <%= link_to "#", class: "btn btn-primary btn-lg" do %>
       SipSense Mix <i class="fa-solid fa-wand-magic-sparkles"></i>
