--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,18 +16,20 @@
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to new_cocktail_path if policy(Cocktail).new?, class: nav_link_class(new_cocktail_path), "aria-current": (current_page?(new_cocktail_path) ? "page" : nil) do %>
-              New Cocktail <i class="fa-solid fa-martini-glass-citrus"></i>
+            <% if policy(Cocktail).new? %>
+              <%= link_to new_cocktail_path, class: nav_link_class(new_cocktail_path), "aria-current": (current_page?(new_cocktail_path) ? "page" : nil) do %>
+                New Cocktail <i class="fa-solid fa-martini-glass-citrus"></i>
+              <% end %>
             <% end %>
           </li>
           <li class="nav-item">
-            <!-- Add the appropriate links (X2) to navbar later once AI "cocktail creation" feature is built -->
+            <!-- Add the appropriate links (X2 - replacing "#" twice) to navbar later once AI "cocktail creation" feature is built -->
             <%= link_to "#", class: nav_link_class(), "aria-current": (current_page?("#") ? "page" : nil) do %>
               SipSense Mix <i class="fa-solid fa-wand-magic-sparkles"></i>
             <% end %>
           </li>
           <li class="nav-item">
-            <!-- Add the appropriate links (x2) to navbar later once AI "chat" feature is built -->
+            <!-- Add the appropriate links (x2 - replacing "#" twice) to navbar later once AI "chat" feature is built -->
             <%= link_to "#", class: nav_link_class(), "aria-current": (current_page?("#") ? "page" : nil) do %>
               SipSense AI <i class="fa-solid fa-comment-dots"></i>
             <% end %>
