--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,7 +4,7 @@
     <div class="col-12">
 
       <!-- Create cocktail form -->
-      <%= simple_form_for @cocktail, class: "form-control" do |f| %>
+      <%= simple_form_for @cocktail do |f| %>
         <%= f.input :name %>
         <%= f.input :description, as: :text %>
 
